# ragas-evaluation

./: .gitignore  evals.py  pyproject.toml  rag.py  ragsys.py  sentiment.py  virtual_machine.ipynb
evals/experiments/: amazing_stroustrup.csv
rag_eval.egg-info/: PKG-INFO  requires.txt
